домашнее задание к 12 уроку

--- a/front-server/src/main/resources/static/cart/cart.html
+++ b/front-server/src/main/resources/static/cart/cart.html
@@ -11,7 +11,7 @@
     <tr ng-repeat="oi in happyUserCart.items">
         <td>{{oi.productTitle}}</td>
         <td>{{oi.quantity}}</td>
-        <td>{{oi.pricePerProduct + ' x ' + oi.quantity + ' = ' + oi.price}}</td>
+        <td>{{oi.costPerProduct + ' x ' + oi.quantity + ' = ' + oi.cost}}</td>
     </tr>
     <tr>
         <td>Итого</td>
