--- a/front-server/src/main/resources/static/order_confirmation/confirmation.html
+++ b/front-server/src/main/resources/static/order_confirmation/confirmation.html
@@ -12,7 +12,7 @@
         <tr ng-repeat="oi in happyUserCart.items">
             <td>{{oi.productTitle}}</td>
             <td>{{oi.quantity}}</td>
-            <td>{{oi.quantity + ' x ' + oi.pricePerProduct + ' = ' + oi.price}}</td>
+            <td>{{oi.quantity + ' x ' + oi.costPerProduct + ' = ' + oi.cost}}</td>
         </tr>
         <tr>
             <td>Итого</td>
