--- a/front-server/src/main/resources/static/products/products.html
+++ b/front-server/src/main/resources/static/products/products.html
@@ -6,12 +6,12 @@
             <input class="form-control" type="text" ng-model="filter.title" id="filterTitle">
         </div>
         <div class="form-group col-md-3">
-            <label for="filterMinPrice">Минимальная цена</label>
-            <input class="form-control" type="number" ng-model="filter.min_price" id="filterMinPrice">
+            <label for="filterMinCost">Минимальная цена</label>
+            <input class="form-control" type="number" ng-model="filter.min_cost" id="filterMinCost">
         </div>
         <div class="form-group col-md-3">
-            <label for="filterMaxPrice">Максимальная цена</label>
-            <input class="form-control" type="number" ng-model="filter.max_price" id="filterMaxPrice">
+            <label for="filterMaxCost">Максимальная цена</label>
+            <input class="form-control" type="number" ng-model="filter.max_price" id="filterMaxCost">
         </div>
     </div>
     <div>
@@ -31,7 +31,7 @@
     <tbody>
     <tr ng-repeat="p in ProductsPage.content">
         <td>{{p.title}}</td>
-        <td>{{p.price}}</td>
+        <td>{{p.cost}}</td>
         <td>
             <button class="btn btn-primary" ng-click="addToCart(p.id)">Добавить в корзину</button>
         </td>
